--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
@@ -3,7 +3,7 @@
 @using Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.Components.ApplicationLayout.MainHeader
 
 <Layout SideWidth="0" IsPage="true" IsFullSide="true" IsFixedHeader="true" IsFixedFooter="true"
-        ShowFooter="true" ShowGotoTop="true" ShowCollapseBar="true" Menus="@Menus" UseTabSet="@UseTabSet" AdditionalAssemblies="new[] { GetType().Assembly }">
+        ShowFooter="true" ShowGotoTop="true" ShowCollapseBar="true" Menus="@Menus" UseTabSet="@UseTabSet" AdditionalAssemblies="@GetAdditionalAssemblies()">
     <Header>
         <span class="ml-3 flex-fill">Bootstrap of Blazor</span>
         <Switch @bind-Value="@UseTabSet" OnText="多标签" OffText="单页" OnColor="@Color.Danger" OffColor="@Color.Dark" style="width: 120px;"></Switch>
