--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainHeader/CultureChooser.razor
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainHeader/CultureChooser.razor
@@ -13,7 +13,9 @@
     private CultureInfo[] supportedCultures = new[]
     {
         new CultureInfo("en-US"),
-        new CultureInfo("zh")
+        new CultureInfo("zh"),
+        new CultureInfo("zh-CN")
+
     };
 
     private CultureInfo Culture
