feat ： 增加启用开关

--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@namespace Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.Components.ApplicationLayout
 @using BootstrapBlazor.Components
-@using Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.Components.ApplicationLayout.MainHeader
 
 <Layout SideWidth="0" IsPage="true" IsFullSide="true" IsFixedHeader="true" IsFixedFooter="true"
         ShowFooter="true" ShowGotoTop="true" ShowCollapseBar="true" Menus="@Menus" UseTabSet="@UseTabSet" AdditionalAssemblies="@GetAdditionalAssemblies()">
