--- a/host/Abp.BootstrapTheme.Blazor.Host/Pages/Index.razor
+++ b/host/Abp.BootstrapTheme.Blazor.Host/Pages/Index.razor
@@ -7,7 +7,7 @@
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
         <h1>Welcome to MyProjectName!</h1>
-
+         <a class="nav-link btn" href="authentication/login">Log in</a>
         @if (CurrentUser.IsAuthenticated)
         {
             <h3>Current User</h3>
