--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainHeader/MainHeaderToolbarUserMenu.razor
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainHeader/MainHeaderToolbarUserMenu.razor
@@ -1,4 +1,6 @@
-﻿<AuthorizeView>
+﻿@namespace Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.Components.ApplicationLayout.MainHeader
+
+<AuthorizeView>
     <Authorized>
         @if ( UserMenu != null )
         {
