--- a/host/Abp.BootstrapTheme.Blazor.Host/Pages/Counter.razor
+++ b/host/Abp.BootstrapTheme.Blazor.Host/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using Serilog
 
         <h1>Counter</h1>
 
@@ -14,7 +15,8 @@
         private void IncrementCount()
         {
             currentCount++;
-        }
+            Log.Information("Incremented count to {CurrentCount}", currentCount);
+         }
     }
 
 
