--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Components/ApplicationLayout/MainLayout.razor
@@ -3,12 +3,13 @@
 @using BootstrapBlazor.Components
 
 <Layout SideWidth="0" IsPage="true" IsFullSide="true" IsFixedHeader="true" IsFixedFooter="true"
-        ShowFooter="true" ShowGotoTop="true" ShowCollapseBar="true" Menus="@Menus" UseTabSet="@UseTabSet" AdditionalAssemblies="@GetAdditionalAssemblies()">
+        ShowFooter="true" ShowGotoTop="true" ShowCollapseBar="true" Menus="@Menus" UseTabSet="@UseTabSet" AdditionalAssemblies="@GetAdditionalAssemblies()"
+        ExcludeUrls="@(new string[] { "authentication/*" })">
     <Header>
         <span class="ml-3 flex-fill">Bootstrap of Blazor</span>        
         <Switch @bind-Value="@UseTabSet" OnText="多标签" OffText="单页" OnColor="@Color.Danger" OffColor="@Color.Dark" style="width: 120px;"></Switch>
         <img src="images/Argo.png" class="layout-avatar-right" />
-        <span class="ml-3 d-none d-sm-block">超级管理员</span>
+        <LoginDisplay></LoginDisplay>
     </Header>
     <Side>
         <MainHeaderBranding />
